--- a/attivita_estive.html
+++ b/attivita_estive.html
@@ -10,15 +10,13 @@
         non ci sono dati che necessitano di aggiornare parecchie volte l'utente-->
         <meta http-equiv="refresh" content="600">
         <link rel="stylesheet" href="attivita_stagionali.css">
-        <!--per il momento inserisco il riferimento della pagina ma non so ancora se sia necessario utilizzare il codice js per controllare i dati-->
-        <script src="home_ESP2.js"></script>
     </head>
     <body>
     <div class="navbar">
         <a href="home.php">Home</a>
         <a href="#">Aggiornamenti impianti</a>
         <a href="#">Iscriviti ad una attività</a>
-        <a href="#">Acquisto skipass</a>
+        <a href="skipass.html">Acquisto skipass</a>
         <!--definisco un identificato per attivare il dropdown in quanto esiste già una classe dichiarata-->
         <div class="dropdown" id="attiva_dropdown">
             <button class="dropbtn">Esperienze
