Quasi completata la pagina di acquisto dello skipass, aggiungere ancora CSS per migliorare i radio button e, in aggiunta, chiedere al docente se come è possibile aggiustare il bordo sbagliato. Chiedere anche in php come posso dichiarare la lingua del documento e infine <div class="acapo"></div>

--- a/attivita_invernali.html
+++ b/attivita_invernali.html
@@ -16,7 +16,6 @@
     <div class="navbar">
         <a href="home.php">Home</a>
         <a href="#">Aggiornamenti impianti</a>
-        <a href="#">Iscriviti ad una attività</a>
         <a href="skipass.html">Acquisto skipass</a>
         <!--definisco un identificato per attivare il dropdown in quanto esiste già una classe dichiarata-->
         <div class="dropdown" id="attiva_dropdown">
@@ -66,7 +65,7 @@
     </div>    
     <!--inserito un logo che, una volta premuto, riporta alla pagina home del sito, verrà inserito in tutte le altre pagine del sito 
     in modo da dare la possibilità agli utenti di riaccedere alla pagina senza utilizzare la nav bar-->
-    <a href="home.php"><img src="../immagini/logo.jpg" alt="caricamento logo artesina"></a>
+    <a href="home.php"><img id="logo" src="../immagini/logo.jpg" alt="caricamento logo artesina"></a>
     <footer>
         <div>Contatti: </div>
         <a href="mailto:info@artesina.it"><div>Email: info@artesina.it</div></a>
