correzione del tag lang. Ora nella home quando cambio la pagina e inserisco quella in inglese il progetto funziona bene e cambia anche la lingua nell'header

--- a/attivita_invernali.html
+++ b/attivita_invernali.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Home page artesina</title>
         <meta name="author" content="Paolo Aimar">
-        <meta name="keywords" lang="it" content="html">
+        <meta name="keywords" content="html">
         <meta name="description" content="Pagina di acquisto dei biglietti">
         <!--in questo caso faccio un refresh della pagina ogni 600 sec per aggiornarla, non ha senso aggiornare molte volte questa pagina in quanto
         non ci sono dati che necessitano di aggiornare parecchie volte l'utente-->
