--- a/skipass.html
+++ b/skipass.html
@@ -11,6 +11,7 @@
         non ci sono dati che necessitano di aggiornare parecchie volte l'utente-->
         <meta http-equiv="refresh" content="600">
         <link rel="stylesheet" href="skipass.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="controllo_validita_skipass.js"></script>
     </head>
     <body>
@@ -31,7 +32,7 @@
     </div> 
     <h1>Acquista il tuo skipass</h1>
     <!--in questo caso è necessario controllare che la data inserita sia superiore a quella -->
-    <form action="#" method="get" name="form1" id="form1" onsubmit="return validateForm('form1');">
+    <form action="carrello.php" method="get" name="form1" id="form1" onsubmit="return validateForm('form1');">
         <div>
             Seleziona il giorno in cui vuoi acquistare lo skipass: 
             <input type="date" id="calendario" name="calendario">
@@ -77,6 +78,13 @@
                 Skipass Stagionale: Valido per l'intera stagione sciistica. Per gli appassionati che vogliono godere della 
                 neve ogni volta che desiderano.
             </label>
+            </div>
+            <div class="txt_email">
+                <!--attraverso il metodo input type=email non è necessario effettuare un 
+                controllo js per verificare che la mail inserita sia corretta 
+                in quanto viene già segnalato automaticamente all'utente
+                -->
+                Inserisci la email: <input type="email" name="email" id="email" placeholder="inserisci la mail...">
             </div>
         </div>
         <div>
