--- a/codice/news.html
+++ b/codice/news.html
@@ -9,7 +9,7 @@
         <!--in questo caso faccio un refresh della pagina ogni 600 sec per aggiornarla, non ha senso aggiornare molte volte questa pagina in quanto
         non ci sono dati che necessitano di aggiornare parecchie volte l'utente-->
         <meta http-equiv="refresh" content="600">
-        <link rel="stylesheet" href="news.css">
+        <link rel="stylesheet" href="../css/news.css">
         <script src="news.js"></script>
     </head>
     <body>
