Aggiungere ancora lo scroll https://www.w3schools.com/howto/howto_js_scroll_indicator.asp con un'immagine nel caso.

--- a/codice/attivita_invernali.html
+++ b/codice/attivita_invernali.html
@@ -16,7 +16,7 @@
     <div class="navbar">
         <a href="home.php">Home</a>
         <a href="#">Aggiornamenti impianti</a>
-        <a href="skipass.html">Acquisto skipass</a>
+        <a href="skipass.php">Acquisto skipass</a>
         <!--definisco un identificato per attivare il dropdown in quanto esiste già una classe dichiarata-->
         <div class="dropdown" id="attiva_dropdown">
             <button class="dropbtn">Esperienze
@@ -26,6 +26,7 @@
                 <a class="attiva" href="attivita_invernali.html">Invernali</a>
             </div>
         </div>
+        <a href="carrello.php">Carrello</a>
     </div> 
     <h1>Attività invernali possibili ad Artesina</h1>
     <div class="attivita">
