progetto 2 struttura terminata, necessario ancora sistemare graficamente il carrello ma da fare dopo aver osservato le libreririe react se necessario (superfluo). Per il resto è stato aggiunto il carrello per gli acquisti e una parte relativa alle news che mostra un pop up di avvertimento (alert) più una progress bar.

--- a/codice/attivita_invernali.html
+++ b/codice/attivita_invernali.html
@@ -15,7 +15,7 @@
     <body>
     <div class="navbar">
         <a href="home.php">Home</a>
-        <a href="#">Aggiornamenti impianti</a>
+        <a href="news.html">Aggiornamenti impianti</a>
         <a href="skipass.php">Acquisto skipass</a>
         <!--definisco un identificato per attivare il dropdown in quanto esiste già una classe dichiarata-->
         <div class="dropdown" id="attiva_dropdown">
